Quick edit to comments

--- a/design/reactions.css
+++ b/design/reactions.css
@@ -1,10 +1,8 @@
 /*!
- *  Powered by Font Awesome 3.2.1
- *  the iconic font designed for Bootstrap
+ *  Powered by Font Awesome 3.2.1 ( http://twitter.com/fontawesome. )
+ *  the iconic font designed for Bootstrap ported for Reactions by Chris ireland
  *  ------------------------------------------------------------------------------
- *  The full suite of pictographic icons, examples, and documentation can be
- *  found at http://fontawesome.io.  Stay up to date on Twitter at
- *  http://twitter.com/fontawesome.
+ *  Reactions CSS 
 */
 @font-face {
   font-family: 'FontAwesome';
