--- a/design/reactions.css
+++ b/design/reactions.css
@@ -2,7 +2,7 @@
  *  Powered by Font Awesome 3.2.1 ( http://twitter.com/fontawesome. )
  *  the iconic font designed for Bootstrap ported for Reactions by Chris ireland
  *  ------------------------------------------------------------------------------
- *  Reactions CSS for 2.1b
+ *  Reactions CSS for 2.1b >IE7 ONLY
 */
 @font-face {
 	font-family: 'FontAwesome';
