--- a/design/reactions.css
+++ b/design/reactions.css
@@ -2,7 +2,7 @@
  *  Powered by Font Awesome 3.2.1 ( http://twitter.com/fontawesome. )
  *  the iconic font designed for Bootstrap ported for Reactions by Chris ireland
  *  ------------------------------------------------------------------------------
- *  Reactions CSS for 2.1b >IE7 ONLY
+ *  Reactions CSS for 2.1b
 */
 @font-face {
 	font-family: 'FontAwesome';
@@ -15,7 +15,7 @@
 /* Reactions */
 .ReactionClass .React {
 	font-family:Arial, Helvetica, sans-serif; /* Temp for Demo */
-	font-size: 80%;
+	font-size: 90%;
 	margin-right: 5px;
 }
 .ReactionClass .React:before { /* Set up base class to work with, reactions could get messy */
@@ -44,13 +44,14 @@
 /* The 3 Reaction styles */
 .ReactionClass .React.lol:before {
 	content: "\f118";
-	padding: 0px 2.5px;
+	padding: 1.1px 2.3px;
+	font-size: 19px;
 }
 .ReactionClass .React.lol:hover:before {
 	background: #FF0;
 }
 .ReactionClass .React.wow:before {
-	content: "\f004";
+	content: "\f005";
 	padding: 0px 1px;
 }
 .ReactionClass .React.wow:hover:before {
@@ -58,6 +59,7 @@
 }
 .ReactionClass .React.scholarly:before {
 	content: "\f06e";
+	padding: 0 0.25px;
 }
 .ReactionClass .React.scholarly:hover:before {
 	background: #0F0;
