--- a/design/reactions.css
+++ b/design/reactions.css
@@ -82,4 +82,9 @@
 		padding: 0 1.25px; 
 		}
 	
+}
+@media screen and (min-width:0\0) { 
+	.ReactionClass .React.lol:before, x:-moz-any-link, x:default { 
+		padding: 1.1px 3.3px; 
 	}
+}
