--- a/design/reactions.css
+++ b/design/reactions.css
@@ -83,12 +83,10 @@
 		}
 	
 }
+
 @media screen and (min-width:0\0) { 
 	.ReactionClass .React.lol:before, x:-moz-any-link, x:default { 
-		padding: 1.1px 3.3px; 
-	}
-	.ReactionClass .React.scholarly:before {
-		padding: 0 1.25px;
+		padding: 1.1px 2px 1.1px 3.3px; 
 	}
 }
 /* Demo Only */
