--- a/design/reactions.css
+++ b/design/reactions.css
@@ -83,8 +83,9 @@
 		}
 	
 }
+
 @media screen and (min-width:0\0) { 
 	.ReactionClass .React.lol:before, x:-moz-any-link, x:default { 
-		padding: 1.1px 3.3px; 
+		padding: 1.1px 2px 1.1px 3.3px; 
 	}
 }
